# vcs-status

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  release.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
examples/: allow_options.rs  repository.rs
src/: error.rs  lib.rs  repository.rs  testing.rs  util.rs
src/allow_options/: mod.rs  tests.rs
src/repository/: mod.rs  tests.rs
src/vcs/: git_cli.rs  git_libgit2.rs  mod.rs
src/vcs/tests/: git.rs  mod.rs
