[package]
name = "vcs-status"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "A library for querying VCS working tree status."
readme = "README.md"
repository = "https://github.com/gifnksm/vcs-status"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
crates-io = true
docs-rs = true
rust-version = true
github-actions = { workflows = "ci.yml" }
codecov = true

[badges]
maintenance = { status = "actively-developed" }
