[package]
name = "vcs-status"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
description = "A library for querying VCS working tree status."
readme = "README.md"
repository = "https://github.com/gifnksm/vcs-status"
license = "MIT OR Apache-2.0"
keywords = [
  "dirty",
  "git",
  "source-control",
  "vcs",
  "version-control",
]
categories = ["command-line-utilities", "development-tools", "version-control"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
crates-io = true
docs-rs = true
rust-version = true
github-actions = { workflows = "ci.yml" }
codecov = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
git2 = { version = "0.21.0", optional = true }
snafu = "0.9.1"

[dev-dependencies]
assert_cmd = { version = "2.2.2", features = ["color"] }
assert_fs = { version = "1.1.4", features = ["color"] }
clap = { version = "4.6.2", features = ["derive"] }
dunce = "1.0.5"
rstest = { version = "0.26.1", default-features = false }
rstest_reuse = "0.7.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["git-default"]

# Enable the default Git backend implementation.
git-default = ["git-libgit2"]

# Enable the libgit2 Git backend implementation.
git-libgit2 = ["dep:git2"]
# Forward git2's vendored-libgit2 feature to prefer linking the vendored
# libgit2 when the backend is enabled.
vendored-libgit2 = ["git2?/vendored-libgit2"]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Restriction group
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
# this lint is currently nightly-only and will reach stable Clippy in 1.99; keep it disabled until then
# definition_in_module_root = "warn"
doc_paragraphs_missing_punctuation = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
exit = "warn"
expect_used = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
# this lint has false positives with `#[cfg(test)]` and --all-targets, so we disable it for now
# <https://github.com/rust-lang/rust-clippy/issues/17342>
# inline_modules = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_inline_in_public_items = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
panic = "warn"
pathbuf_init_then_push = "warn"
pointer_format = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
# this lint is currently nightly-only and will reach stable Clippy in 1.99; keep it disabled until then
# rest_pattern_accessible_field = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
# this lint is currently nightly-only and will reach stable Clippy in 1.99; keep it disabled until then
# unnecessary_rest_pattern = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"

[lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
keyword_idents = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
missing_unsafe_on_extern = "warn"
redundant_imports = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
# false positive with examples, so we disable it
# <https://github.com/rust-lang/rust/issues/95513>
# unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
